alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ letter-spacing:1px;
 /* contact section */
 #contact{
     position: relative;
-    top: 50px;
+    top: 30px;
 }
 
 #contact a{
